crates/sdk/tests/macros/invalid_args.stderr
error[E0433]: failed to resolve: could not find `calimero_storage` in the list of imported crates
 --> tests/macros/invalid_args.rs:3:1
  |
3 | #[app::state]
  | ^^^^^^^^^^^^^ could not find `calimero_storage` in the list of imported crates
  |
  = note: this error originates in the attribute macro `app::state` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: (calimero)> no method named `#[app::init]` found for type `MyType`
 --> tests/macros/invalid_args.rs:4:8
  |
4 | struct MyType;
  |        ^^^^^^ add an `#[app::init]` method to this type
  |
  = help: the trait `AppStateInit` is not implemented for `MyType`
note: required by a bound in `AppState`
 --> src/state.rs
  |
  | pub trait AppState: BorshSerialize + BorshDeserialize + AppStateInit {
  |                                                         ^^^^^^^^^^^^ required by this bound in `AppState`

error[E0277]: the trait bound `MyType: BorshDeserialize` is not satisfied
 --> tests/macros/invalid_args.rs:4:8
  |
4 | struct MyType;
  |        ^^^^^^ the trait `BorshDeserialize` is not implemented for `MyType`
  |
  = help: the following other types implement trait `BorshDeserialize`:
            ()
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
            (T0, T1, T2, T3, T4)
            (T0, T1, T2, T3, T4, T5)
            (T0, T1, T2, T3, T4, T5, T6)
            (T0, T1, T2, T3, T4, T5, T6, T7)
          and $N others
note: required by a bound in `AppState`
 --> src/state.rs
  |
  | pub trait AppState: BorshSerialize + BorshDeserialize + AppStateInit {
  |                                      ^^^^^^^^^^^^^^^^ required by this bound in `AppState`

error[E0277]: the trait bound `MyType: BorshSerialize` is not satisfied
 --> tests/macros/invalid_args.rs:4:8
  |
4 | struct MyType;
  |        ^^^^^^ the trait `BorshSerialize` is not implemented for `MyType`
  |
  = help: the following other types implement trait `BorshSerialize`:
            &T
            ()
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
            (T0, T1, T2, T3, T4)
            (T0, T1, T2, T3, T4, T5)
            (T0, T1, T2, T3, T4, T5, T6)
          and $N others
note: required by a bound in `AppState`
 --> src/state.rs
  |
  | pub trait AppState: BorshSerialize + BorshDeserialize + AppStateInit {
  |                     ^^^^^^^^^^^^^^ required by this bound in `AppState`
